[package]
name = "wasm-wgsl-canvas"
version = "0.1.0"
authors = ["maokwen <18361388+maokwen@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
fern = "0.6"
console_log = "1"
wgpu = { version = "0.20", features = ["webgpu", "webgl"] }
web-time = "1.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "Location",
  "HtmlCollection",
  "Request",
  "Response",
  "MutationObserver",
  "MutationObserverInit",
  "MouseEvent",
]}
reqwest = "0.12"
anyhow = "1.0"
image = "0.25"
bytemuck = { version = "1.15", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

